test: test min-width and min-height on question img to prevent stretching

--- a/style.css
+++ b/style.css
@@ -529,6 +529,8 @@ section:nth-child(odd) {
 .question-image {
   width: 9rem;
   height: 9rem;
+  min-width: 9rem;
+  min-height: 9rem;
   border-radius: 50%;
   object-fit: cover;
   margin-right: 5rem;
@@ -715,6 +717,8 @@ section:nth-child(odd) {
   .question-image {
     width: 7rem;
     height: 7rem;
+    min-width: 7rem;
+    min-height: 7rem;
     margin-bottom: 3rem;
     margin-right: 20px;
   }
@@ -877,6 +881,8 @@ section:nth-child(odd) {
   .question-image {
     width: 6rem;
     height: 6rem;
+    min-width: 6rem;
+    min-height: 6rem;
     margin-bottom: 1rem;
     margin: 0;
     top: 0px;
